--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ pandas = [
 
 [tool.pdm]
 [tool.pdm.dev-dependencies]
+dev = [
+    "pre-commit>=2.20.0",
+]
 
 [build-system]
 requires = ["pdm-pep517>=0.12.0"]
