--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,16 +32,29 @@ repos:
       - id: black
         args: [--skip-string-normalization]
 
+  - repo: https://github.com/pycqa/bandit
+    rev: 1.7.4
+    hooks:
+      - id: bandit
+
   - repo: https://github.com/pycqa/pydocstyle
     rev: 6.1.1
     hooks:
       - id: pydocstyle
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.971
+    hooks:
+      - id: mypy
+        additional_dependencies: [types-requests]
 
   - repo: https://github.com/flakeheaven/flakeheaven
     rev: 2.0.0
     hooks:
       - id: flakeheaven
         additional_dependencies:
+          - dlint
+          - pylint
           - flake8-annotations
           - flake8-bugbear
           - flake8-builtins
